# AudioLib

./: CMakeLists.txt  README.md
doc/: DFT.tex
src/sw/: frequencyenvelope.hpp  notes.hpp  phases.hpp  processingbuffer.hpp  signals.hpp  spectrum.hpp  variant.hpp
src/sw/chrono/: timer.hpp
src/sw/containers/: lockfreeswap.hpp  spinlockedringbuffer.hpp  utils.hpp
src/sw/containers/spsc/: spinlockedringbuffer.hpp  swap.hpp
src/sw/dft/: spectrum.hpp  transform.hpp  utils.hpp
src/sw/math/: angles.hpp  concepts.hpp  constants.hpp  helpers.hpp  math.hpp
src/sw/ranges/: defines.hpp  utils.hpp
tests/: CMakeLists.txt  chrono.cpp  sinewavedetection.cpp
tests/containers/: lockfreeswap.cpp  spinlockedringbuffer.cpp
tests/containers/spsc/: spinlockedringbuffer.cpp  swap.cpp
tests/dft/: dft.cpp  spectrum.cpp
tests/math/: angles.cpp
